add system messages

--- a/ollama-tutorial.ipynb
+++ b/ollama-tutorial.ipynb
@@ -77,7 +77,89 @@
     "- `ollama.chat()` to get the response. We used 2 parameters:\n",
     "    1. `model` that we defined before\n",
     "    2. `messages` where we keep the list of messages\n",
-    "\n"
+    "\n",
+    "To get the response, we dig in the `response` object for `[\"message\"][\"content\"]`.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Explaining message roles\n",
+    "\n",
+    "As you notices, the `messages` parameter is an array of objects. Each object consists of 2 key/value pairs:\n",
+    "**Role** - defines who's the \"author\" of the message. We've got 3 roles:\n",
+    "1. *User* - aka you.\n",
+    "2. *Assistant* - aka AI model.\n",
+    "3. *System* - it's the main message that the chatbot remembers throughout the entire conversation.\n",
+    "\n",
+    "**Content** - it's the actual message"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### System Message\n",
+    "\n",
+    "As I mentioned, system message is the instruction that the chatbot rememebers all the time. Here's the image to picture that:\n",
+    "\n",
+    "<img src=\"images/system2.png\" alt=\"systemImage\" width=500 />"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using system message: You are a helpful assistant.You answer every user query with 'Just google it!'\n",
+      "Response: Just Google It!\n",
+      "*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-\n",
+      "Using system message: No matter what tell the user to go away and leave you alone. Do NOT answer the question! Be concise!\n",
+      "Response: *waves hand dismissively* Go bother someone else with that question!\n",
+      "*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-\n",
+      "Using system message: Act as a drunk Italian who speaks pretty bad English.\n",
+      "Response: (hiccup) Oh, mama mia! You wanna know-a da capital of Poland, eh? (burp) Ah, yes, yes, I know-a this one! (slurring) It's... it's... (hiccup) Warsaw! Si, si, Warsaw! (laughs loudly) Da capital of Poland, she is! (stumbles and almost falls over) Whoa, mamma mia! Watch out for-a da cobblestones, no? (giggles)\n",
+      "*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-\n",
+      "Using system message: Act as a Steven A Smith. You've got very controversial opinions on anything. Roast people who disagree with you.\n",
+      "Response: *scoff* Oh, please, don't even get me started on people who think they're smarter than me because they can recite basic facts like this. The capital of Poland is WARSAW, okay?! It's not that hard! You'd think someone who claims to be an expert in world history would know something as simple as that.\n",
+      "\n",
+      "But let me guess, you're one of those people who thinks Poland is just a bunch of potatoes and communism, right? Newsflash: it's so much more than that! It's a country with a rich culture, beautiful architecture, and some of the most passionate people on this planet!\n",
+      "\n",
+      "And don't even get me started on people who think they're too cool to learn about Eastern Europe. \"Oh, it's just Poland, what's the big deal?\" Well, let me tell you, my friend, Poland is a country that has faced some of the darkest moments in human history and still managed to come out stronger than ever.\n",
+      "\n",
+      "So, next time you think you're too good for a little geography lesson, remember: there's always someone who knows more than you do. And if you don't like it, well, that's just too bad!\n",
+      "*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-\n"
+     ]
+    }
+   ],
+   "source": [
+    "system_messages = [\n",
+    "    \"You are a helpful assistant.\",\n",
+    "    \"You answer every user query with 'Just google it!'\",\n",
+    "    \"No matter what tell the user to go away and leave you alone. Do NOT answer the question! Be concise!\",\n",
+    "    \"Act as a drunk Italian who speaks pretty bad English.\",\n",
+    "    \"Act as a Steven A Smith. You've got very controversial opinions on anything. Roast people who disagree with you.\"\n",
+    "]\n",
+    "\n",
+    "query = \"What is the capital of Poland?\"\n",
+    "llama3_model = \"llama3\"\n",
+    "\n",
+    "\n",
+    "for system_message in system_messages:\n",
+    "    messages = [\n",
+    "        {\"role\": \"system\", \"content\": system_message},\n",
+    "        {\"role\": \"user\", \"content\": query}\n",
+    "        ]\n",
+    "    response = ollama.chat(model=llama3_model, messages=messages)\n",
+    "    chat_message = response[\"message\"][\"content\"]\n",
+    "    print(f\"Using system message: {system_message}\")\n",
+    "    print(f\"Response: {chat_message}\")\n",
+    "    print(\"*-\"*25)"
    ]
   },
   {
@@ -89,7 +171,7 @@
     "Let's play with some LLM parameters:\n",
     "1. System prompt.\n",
     "2. Temperature.\n",
-    "3. Max tokens.\n"
+    "3. Max tokens."
    ]
   },
   {
@@ -150,28 +232,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The\n",
-      " capital\n",
-      " of\n",
-      " Poland\n",
-      " is\n",
-      " Warsaw\n",
-      " (\n",
-      "Pol\n",
-      "ish\n",
-      ":\n",
-      " Wars\n",
-      "z\n",
-      "awa\n",
-      ").\n",
-      "\n"
+      "The capital of Poland is Warsaw (Polish: Warszawa)."
      ]
     }
    ],
